--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ a {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url("/images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
